--- a/.env
+++ b/.env
@@ -1,58 +1,18 @@
-APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:+MAF/0S1hZfvI2JBVXsCOqsRMEXoMIEhsFLT0mGlaIg=
+# APP_KEY=base64:HQzecb/VfBEWiXQZX+3VOlHFSmTrmJDGQs6Ra1A3UQk=
+APP_KEY=base64:oP+M/qitWRogNGPig9tllNN+jQB5/2dRJC13c6LYWg4=
 APP_DEBUG=true
-APP_URL=http://localhost
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=wiss01
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=wiss-server.mysql.database.azure.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
-
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+DB_DATABASE=wiss
+DB_USERNAME=nciauuwndv
+DB_PASSWORD=Aiap@2012
