--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 /node_modules
-/public/build
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
+/.idea
+/.vagrant
 Homestead.json
 Homestead.yaml
-auth.json
 npm-debug.log
-yarn-error.log
-/.idea
-/.vscode
+# .env
+.env.production
+/.azure
