--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 /node_modules
+/public/build
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vagrant
+.env
+.env.backup
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
+auth.json
 npm-debug.log
-.env
-.env.production
-/.azure
+yarn-error.log
+/.idea
+/.vscode
